--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,12 @@ color: #ffffff;
 font-family: "Arial";
 font-size: 60px;
 font-weight: 400;
+    margin: 0;
 }
 
 .section1 {
+    padding: 50px;
+    box-sizing: border-box;
     background-color: #445162;
     margin: 0;
 }
@@ -28,7 +31,7 @@ line-height: 36px;
 
 .need {
     width: 462px;
-    padding: 50px;
+   /* padding: 50px;*/
     float:left;
 }
 
@@ -39,15 +42,14 @@ line-height: 36px;
 }
 .photo {
     width: 469px;
-    height: 214px;
-    padding-top: 50px;
+    float: right;
     background-color: #fff;
     display: block;
 }
 
 
 .blok {
-    padding: 50px;
+   /* padding: 50px;*/
     float: left;
     width: 653px;
 }
@@ -59,7 +61,8 @@ line-height: 36px;
 }
 
 video {
-    margin: 50px;
+    /*margin: 50px;*/
+    float: right;
     width: 427px;
     height: 245px;
     background-color: #445161;
@@ -143,3 +146,8 @@ background-color: #445161;
 }
 
 
+
+.section2 {
+    padding: 50px;
+box-sizing: border-box;
+}
