--- a/css/style.css
+++ b/css/style.css
@@ -113,11 +113,14 @@ line-height: 24px;
 }
 
 .fourth-h {
+    display: block;
+    width: 100%;
 color: #445161;
 font-family: "Arial";
 font-size: 30px;
 font-weight: 400;
 line-height: 36px;
+    text-align: center;
 }
 
 .card-h {
@@ -126,20 +129,23 @@ font-family: "Arial";
 font-size: 24px;
 font-weight: 400;
 line-height: 30px;
+    margin: 0;
+    padding: 0;
 }
 
 .text {
-width: 359px;
-height: 108px;
+width: 369px;
 color: #333333;
 font-family: "Arial";
 font-size: 16px;
 font-weight: 400;
 line-height: 24px;
+    margin: 0;
 }
 
 .photos {
 display: block;
+float: left;
 width: 200px;
 height: 150px;
 background-color: #445161;
@@ -150,4 +156,35 @@ background-color: #445161;
 .section2 {
     padding: 50px;
 box-sizing: border-box;
+}
+
+
+
+.block {
+    display:flex;
+    width: 554px;
+align-items: center;
+}
+
+
+
+
+
+figcaption {
+float: right;  
+    margin-left: 15px;
+}
+
+.photos::after {
+  content: "";
+    display: block;
+    clear: both;  
+}
+
+.screen {
+    display: flex;
+    flex-direction: row;
+  //justify-content: space-evenly;
+  flex-wrap: wrap;
+  //align-items: center;
 }
