--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,45 @@ float: right;
   flex-wrap: wrap;
   //align-items: center;
 }
+
+.fifth-h {
+    display: block;
+width: 100%;    text-align: center;
+    color: #445161;
+font-family: "Arial";
+font-size: 30px;
+font-weight: 400;
+line-height: 36px;
+}
+
+.avatar {
+    display: block;
+    width: 75px;
+height: 75px;
+background-color: #445161;
+    border-radius: 50%;
+}
+
+.comments {
+color: #333333;
+font-family: "Arial";
+font-size: 14px;
+font-weight: 400;
+line-height: 18px;
+border: 1px solid;
+width: 426px;
+    padding: 16px 20px 0 27px;
+    background-color: #ebebeb;
+    margin-left: 30px;
+}
+
+.comment {
+    display: flex;
+    padding: 0px 0px 0px 50px;
+}
+
+.reviews {
+    display:flex; 
+    width: 100%;
+    flex-wrap: wrap;
+}
