--- a/css/style.css
+++ b/css/style.css
@@ -213,11 +213,13 @@ font-family: "Arial";
 font-size: 14px;
 font-weight: 400;
 line-height: 18px;
-border: 1px solid;
-width: 426px;
-    padding: 16px 20px 0 27px;
+width: 440px;
+    height: 121px;
+    padding: 16px 0px 0 27px;
     background-color: #ebebeb;
-    margin-left: 30px;
+    margin-left: 28px;
+    position: relative;
+    padding-right: 20px;
 }
 
 .comment {
@@ -229,4 +231,24 @@ width: 426px;
     display:flex; 
     width: 100%;
     flex-wrap: wrap;
+}
+
+.comments::before {
+    content: "";
+    display: block;
+    position: absolute;
+    border: 1px solid black;
+    top: 27px;
+    left: -30px;
+    border: 15px solid transparent;	
+    border-right: 15px solid #ebebeb;
+}
+
+
+.author {
+color: #989898;
+font-family: "Arial";
+font-size: 14px;
+font-weight: 400;
+line-height: 18px;
 }
