--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ float: right;
   //justify-content: space-evenly;
   flex-wrap: wrap;
   //align-items: center;
+    
 }
 
 .fifth-h {
@@ -200,37 +201,39 @@ line-height: 36px;
 }
 
 .avatar {
-    display: block;
-    width: 75px;
+display: block;
+width: 75px;
 height: 75px;
 background-color: #445161;
-    border-radius: 50%;
+border-radius: 50%;
+margin-top: 20px;    
 }
 
 .comments {
 color: #333333;
 font-family: "Arial";
 font-size: 14px;
-font-weight: 400;
 line-height: 18px;
-width: 440px;
-    height: 121px;
-    padding: 16px 0px 0 27px;
-    background-color: #ebebeb;
-    margin-left: 28px;
-    position: relative;
-    padding-right: 20px;
+width: 418px;
+height: 121px;
+padding: 16px 0px 0px 20px;
+background-color:#ebebeb;
+margin-left: 24px;
+position: relative;
 }
 
 .comment {
     display: flex;
-    padding: 0px 0px 0px 50px;
+    padding: 0px 50px 0px 50px;
+    //margin-right: 50px;
 }
 
 .reviews {
     display:flex; 
     width: 100%;
     flex-wrap: wrap;
+    background-color: #f5f5f5;
+    margin-top: 40px;
 }
 
 .comments::before {
@@ -251,4 +254,79 @@ font-family: "Arial";
 font-size: 14px;
 font-weight: 400;
 line-height: 18px;
+}
+
+.buy {
+    width: 100%;
+    display: flex;
+    flex-wrap:wrap;
+    align-items: flex-end;
+    box-sizing: border-box;
+}
+
+.sixth-h {
+color: #445161;
+font-family: "Arial";
+font-size: 30px;
+font-weight: 400;
+line-height: 36px;
+width: 100%;
+text-align: center;
+}
+
+.card-buy {
+    background-color: #445162;
+    //border: 2px solid #445162;
+    margin-left: 61px;
+    margin-right: 61px;
+    width: 300px;
+    border-radius: 5px;
+}
+
+.you-had {
+color: #ffffff;
+font-family: "Arial";
+font-size: 14px;
+font-weight: 400;
+line-height: 24px;
+}
+
+.card-h-buy {
+color: #ffffff;
+font-family: "Arial";
+font-size: 24px;
+font-weight: 400;
+line-height: 30px;
+text-align: center;
+margin-top: 15px;
+margin-bottom: 0;
+}
+
+.price-num {
+color: #445162;
+font-family: "Arial";
+font-size: 40px;
+font-weight: 400;
+background-color: #fff;
+margin-top: 10px ;
+margin-bottom:0px;
+padding: 15px;
+text-align: center;
+border: 2px solid #445162;
+ }
+
+.buy-btn {
+width: 260px;
+height: 40px;
+background-color: #fff;
+margin-left: 20px;  
+border:0px;
+border-radius: 4px;
+color: #445161;
+font-family: "Arial";
+font-size: 18px;
+font-weight: 700;
+line-height: 18px;
+text-transform: uppercase;
+    margin-bottom: 15px;
 }
