--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .container {
    width: 1280px; 
     margin:0 auto ;
@@ -68,7 +67,7 @@ video {
     background-color: #445161;
 }
 
-.second-h {
+.second-h {    
 color: #445161;
 font-family: "Arial";
 font-size: 30px;
@@ -85,12 +84,13 @@ line-height: 24px;
 }
 
 .third-h {
+width: 100%;
+text-align: center;
 color: #445161;
 font-family: "Arial";
 font-size: 30px;
 font-weight: 400;
 line-height: 36px;
-margin-left: 460px;
 }
 
 .section3 {
@@ -113,8 +113,8 @@ line-height: 24px;
 }
 
 .fourth-h {
-    display: block;
-    width: 100%;
+display: block;
+width: 100%;
 color: #445161;
 font-family: "Arial";
 font-size: 30px;
@@ -129,12 +129,12 @@ font-family: "Arial";
 font-size: 24px;
 font-weight: 400;
 line-height: 30px;
-    margin: 0;
-    padding: 0;
+margin: 0;
+padding: 0;
 }
 
 .text {
-width: 369px;
+width: 360px;
 color: #333333;
 font-family: "Arial";
 font-size: 16px;
@@ -145,7 +145,7 @@ line-height: 24px;
 
 .photos {
 display: block;
-float: left;
+//float: left;
 width: 200px;
 height: 150px;
 background-color: #445161;
@@ -161,9 +161,11 @@ box-sizing: border-box;
 
 
 .block {
-    display:flex;
-    width: 554px;
+display:flex;
+width: 574px;
 align-items: center;
+margin: 0 15px 30px 0;
+padding: 0;
 }
 
 
@@ -182,12 +184,11 @@ float: right;
 }
 
 .screen {
-    display: flex;
-    flex-direction: row;
-  //justify-content: space-evenly;
-  flex-wrap: wrap;
-  //align-items: center;
-    
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;   
+padding: 50px;
+box-sizing: border-box;
 }
 
 .fifth-h {
@@ -233,7 +234,6 @@ position: relative;
     width: 100%;
     flex-wrap: wrap;
     background-color: #f5f5f5;
-    margin-top: 40px;
 }
 
 .comments::before {
@@ -262,6 +262,7 @@ line-height: 18px;
     flex-wrap:wrap;
     align-items: flex-end;
     box-sizing: border-box;
+    justify-content: center;
 }
 
 .sixth-h {
@@ -276,11 +277,12 @@ text-align: center;
 
 .card-buy {
     background-color: #445162;
-    //border: 2px solid #445162;
-    margin-left: 61px;
-    margin-right: 61px;
+    margin: 0 45px 61px 0;
     width: 300px;
     border-radius: 5px;
+}
+.card-buy:nth-child(4) {
+margin-right: 0;
 }
 
 .you-had {
