--- a/css/style.css
+++ b/css/style.css
@@ -305,16 +305,18 @@ margin-bottom: 0;
 }
 
 .price-num {
+display: block;
 color: #445162;
 font-family: "Arial";
 font-size: 40px;
 font-weight: 400;
 background-color: #fff;
 margin-top: 10px ;
-margin-bottom:0px;
 padding: 15px;
 text-align: center;
 border: 2px solid #445162;
+box-sizing: border-box;
+height: 71px;
  }
 
 .buy-btn {
@@ -332,3 +334,5 @@ line-height: 18px;
 text-transform: uppercase;
     margin-bottom: 15px;
 }
+
+
