--- a/css/style.css
+++ b/css/style.css
@@ -150,16 +150,10 @@ width: 200px;
 height: 150px;
 background-color: #445161;
 }
-
-
-
 .section2 {
     padding: 50px;
 box-sizing: border-box;
 }
-
-
-
 .block {
 display:flex;
 width: 574px;
@@ -167,10 +161,6 @@ align-items: center;
 margin: 0 15px 30px 0;
 padding: 0;
 }
-
-
-
-
 
 figcaption {
 float: right;  
@@ -246,8 +236,6 @@ position: relative;
     border: 15px solid transparent;	
     border-right: 15px solid #ebebeb;
 }
-
-
 .author {
 color: #989898;
 font-family: "Arial";
@@ -335,8 +323,6 @@ text-transform: uppercase;
     margin-bottom: 15px;
 }
 
-
-
 .contact {
 padding: 50px;
 box-sizing: border-box;
@@ -404,4 +390,47 @@ line-height: 24px;
 text-transform: uppercase;
 padding:  14px 48px 14px 48px;
 margin: 21px auto;
+}
+
+.link {
+display: block;
+color: #fff;
+font-family: "Arial";
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+position: relative;
+margin-bottom: 29px;
+margin-left: 30px;    
+}
+
+.link:before {
+    content: "";
+   display: block;
+    width: 24px;
+    height: 26px;
+    position: absolute;
+    left: -30px;
+    top:0px; 
+}
+
+.link:nth-child(1)::before{
+background-image: url(../img/skype_icon.png);  
+background-repeat: no-repeat;
+}
+.link:nth-child(2)::before{
+background-image: url(../img/icq_icon.png);  
+background-repeat: no-repeat;
+}
+.link:nth-child(3)::before{
+background-image: url(../img/email_icon.png);  
+background-repeat: no-repeat;
+}
+.link:nth-child(4)::before{
+background-image: url(../img/phone_icon.png);  
+background-repeat: no-repeat;
+}
+
+.list-contact {
+    margin: 0;
 }
