--- a/css/style.css
+++ b/css/style.css
@@ -434,3 +434,23 @@ background-repeat: no-repeat;
 .list-contact {
     margin: 0;
 }
+
+.social-img {
+    margin-left: 35px;
+}
+
+footer {
+    width: 100%;
+    height: 27px;
+    
+}
+
+.footer {
+color: #445162;
+font-family: "Arial";
+font-size: 12px;
+font-weight: 400;
+line-height: 24px;
+margin: 0;
+text-align: center;
+}
