--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,15 @@ font-weight: 400;
 }
 
 .list-struct {
+outline: none;
+list-style-type: none;
 text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
 color: #fff;
 font-family: "Arial";
 font-size: 20px;
 font-weight: 400;
 line-height: 36px;
+    position: relative;
 }
 
 .need {
@@ -104,12 +107,13 @@ line-height: 36px;
 }
 
 .struct-list {
-    margin-bottom: 30px;
-    color: #333333;
+margin-bottom: 30px;
+color: #333333;
 font-family: "Arial";
 font-size: 16px;
 font-weight: 400;
 line-height: 24px;
+position:relative;
 }
 
 .fourth-h {
@@ -440,9 +444,8 @@ background-repeat: no-repeat;
 }
 
 footer {
-    width: 100%;
-    height: 27px;
-    
+width: 100%;
+height: 0;  
 }
 
 .footer {
@@ -453,4 +456,31 @@ font-weight: 400;
 line-height: 24px;
 margin: 0;
 text-align: center;
+background-color: #f5f5f5;
 }
+
+.list-struct::before {
+content: "";
+display: block;
+width: 25px; 
+height: 19px;
+position: absolute;  
+top: 8px;
+left: -28px;
+background-image: url(../img/check_icon.png);    
+}
+
+.struct-list::before {
+content: "";
+display: block;
+width: 32px;
+height: 32px;
+background-color: #445161;
+background-image:url(../img/Layer_2.png);  
+background-repeat:no-repeat;
+position: absolute;
+top: 6px;
+left: -42px;
+margin: 0 auto;
+}
+
